HW2 contains using indexOf